Fixed: Fixed some layout bugs.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -141,6 +141,6 @@ $sans-serif:
     }
 }
 
-.taxonomy__index {
+.taxonomy__section {
     padding-bottom: 0em;
 }
